syntax = "proto3";

package protobuf.pb.disk;

option go_package = "github.com/micro-in-cn/platform-web/assembly-line/protobuf/go/disk";

import "basic/error.proto";
import "google/protobuf/timestamp.proto";

message UsageStat {
    google.protobuf.Timestamp timestamp = 1;
    string path = 2;
    string fstype = 3;
    uint64 total = 4;
    uint64 free = 5;
    uint64 used = 6;
    double usedPercent = 7;
    uint64 inodesTotal = 8;
    uint64 inodesUsed = 9;
    uint64 inodesFree = 10;
    double inodesUsedPercent = 11;
}

message PartitionStat {
    google.protobuf.Timestamp timestamp = 1;
    string device = 2;
    string mountpoint = 3;
    string fstype = 4;
    string opts = 5;
}

message IOCountersStat {
    google.protobuf.Timestamp timestamp = 1;
    uint64 readCount = 2;
    uint64 mergedReadCount = 3;
    uint64 writeCount = 4;
    uint64 mergedWriteCount = 5;
    uint64 readBytes = 6;
    uint64 writeBytes = 7;
    uint64 readTime = 8;
    uint64 writeTime = 9;
    uint64 iopsInProgress = 10;
    uint64 ioTime = 11;
    uint64 weightedIO = 12;
    string name = 13;
    string serialNumber = 14;
    string label = 15;
}

message DiskRequest {
    google.protobuf.Timestamp timestamp = 1;
    string IP = 2;
    string nodeName = 3;
    repeated UsageStat usageStat = 4;
    repeated PartitionStat partitionStat = 5;
    repeated IOCountersStat ioCountersStat = 6;
}

message DiskResponse {
    basic.Error error = 1;
}

service DiskService {
    rpc PushDiskUsageStat (DiskRequest) returns (DiskResponse) {
    }
    rpc PushPartitionStat (DiskRequest) returns (DiskResponse) {
    }
    rpc PushIOCountersStat (DiskRequest) returns (DiskResponse) {
    }
}